Improved driver functionality
