# backend/driver/api/driver/driver_grpc.pb.go
@@ -1,7 +1,7 @@
 // Code generated by protoc-gen-go-grpc. DO NOT EDIT.
 // versions:
-// - protoc-gen-go-grpc v1.6.1
-// - protoc             v3.21.12
+// - protoc-gen-go-grpc v1.6.2
+// - protoc             v5.29.3
 // source: driver/driver.proto
 
 package driver
@@ -19,16 +19,27 @@ import (
 const _ = grpc.SupportPackageIsVersion9
 
 const (
-	Driver_GetVerifyCode_FullMethodName = "/api.driver.Driver/GetVerifyCode"
-	Driver_SubmitPhone_FullMethodName   = "/api.driver.Driver/SubmitPhone"
+	Driver_GetVerifyCode_FullMethodName       = "/api.driver.Driver/GetVerifyCode"
+	Driver_Register_FullMethodName            = "/api.driver.Driver/Register"
+	Driver_Login_FullMethodName               = "/api.driver.Driver/Login"
+	Driver_UpdateDriverProfile_FullMethodName = "/api.driver.Driver/UpdateDriverProfile"
+	Driver_UpdateWorkStatus_FullMethodName    = "/api.driver.Driver/UpdateWorkStatus"
 )
 
 // DriverClient is the client API for Driver service.
 //
 // For semantics around ctx use and closing/ending streaming RPCs, please refer to https://pkg.go.dev/google.golang.org/grpc/?tab=doc#ClientConn.NewStream.
 type DriverClient interface {
+	// 获取验证码
 	GetVerifyCode(ctx context.Context, in *GetVerifyCodeRequest, opts ...grpc.CallOption) (*GetVerifyCodeReply, error)
-	SubmitPhone(ctx context.Context, in *SubmitPhoneRequest, opts ...grpc.CallOption) (*SubmitPhoneReply, error)
+	// 注册
+	Register(ctx context.Context, in *RegisterRequest, opts ...grpc.CallOption) (*RegisterReply, error)
+	// 登录
+	Login(ctx context.Context, in *LoginRequest, opts ...grpc.CallOption) (*LoginReply, error)
+	// 更新司机资料
+	UpdateDriverProfile(ctx context.Context, in *UpdateDriverProfileRequest, opts ...grpc.CallOption) (*UpdateDriverProfileReply, error)
+	// 修改司机的状态
+	UpdateWorkStatus(ctx context.Context, in *UpdateWorkStatusRequest, opts ...grpc.CallOption) (*UpdateWorkStatusReply, error)
 }
 
 type driverClient struct {
@@ -49,10 +60,40 @@ func (c *driverClient) GetVerifyCode(ctx context.Context, in *GetVerifyCodeReque
 	return out, nil
 }
 
-func (c *driverClient) SubmitPhone(ctx context.Context, in *SubmitPhoneRequest, opts ...grpc.CallOption) (*SubmitPhoneReply, error) {
+func (c *driverClient) Register(ctx context.Context, in *RegisterRequest, opts ...grpc.CallOption) (*RegisterReply, error) {
 	cOpts := append([]grpc.CallOption{grpc.StaticMethod()}, opts...)
-	out := new(SubmitPhoneReply)
-	err := c.cc.Invoke(ctx, Driver_SubmitPhone_FullMethodName, in, out, cOpts...)
+	out := new(RegisterReply)
+	err := c.cc.Invoke(ctx, Driver_Register_FullMethodName, in, out, cOpts...)
+	if err != nil {
+		return nil, err
+	}
+	return out, nil
+}
+
+func (c *driverClient) Login(ctx context.Context, in *LoginRequest, opts ...grpc.CallOption) (*LoginReply, error) {
+	cOpts := append([]grpc.CallOption{grpc.StaticMethod()}, opts...)
+	out := new(LoginReply)
+	err := c.cc.Invoke(ctx, Driver_Login_FullMethodName, in, out, cOpts...)
+	if err != nil {
+		return nil, err
+	}
+	return out, nil
+}
+
+func (c *driverClient) UpdateDriverProfile(ctx context.Context, in *UpdateDriverProfileRequest, opts ...grpc.CallOption) (*UpdateDriverProfileReply, error) {
+	cOpts := append([]grpc.CallOption{grpc.StaticMethod()}, opts...)
+	out := new(UpdateDriverProfileReply)
+	err := c.cc.Invoke(ctx, Driver_UpdateDriverProfile_FullMethodName, in, out, cOpts...)
+	if err != nil {
+		return nil, err
+	}
+	return out, nil
+}
+
+func (c *driverClient) UpdateWorkStatus(ctx context.Context, in *UpdateWorkStatusRequest, opts ...grpc.CallOption) (*UpdateWorkStatusReply, error) {
+	cOpts := append([]grpc.CallOption{grpc.StaticMethod()}, opts...)
+	out := new(UpdateWorkStatusReply)
+	err := c.cc.Invoke(ctx, Driver_UpdateWorkStatus_FullMethodName, in, out, cOpts...)
 	if err != nil {
 		return nil, err
 	}
@@ -63,8 +104,16 @@ func (c *driverClient) SubmitPhone(ctx context.Context, in *SubmitPhoneRequest, 
 // All implementations must embed UnimplementedDriverServer
 // for forward compatibility.
 type DriverServer interface {
+	// 获取验证码
 	GetVerifyCode(context.Context, *GetVerifyCodeRequest) (*GetVerifyCodeReply, error)
-	SubmitPhone(context.Context, *SubmitPhoneRequest) (*SubmitPhoneReply, error)
+	// 注册
+	Register(context.Context, *RegisterRequest) (*RegisterReply, error)
+	// 登录
+	Login(context.Context, *LoginRequest) (*LoginReply, error)
+	// 更新司机资料
+	UpdateDriverProfile(context.Context, *UpdateDriverProfileRequest) (*UpdateDriverProfileReply, error)
+	// 修改司机的状态
+	UpdateWorkStatus(context.Context, *UpdateWorkStatusRequest) (*UpdateWorkStatusReply, error)
 	mustEmbedUnimplementedDriverServer()
 }
 
@@ -78,8 +127,17 @@ type UnimplementedDriverServer struct{}
 func (UnimplementedDriverServer) GetVerifyCode(context.Context, *GetVerifyCodeRequest) (*GetVerifyCodeReply, error) {
 	return nil, status.Error(codes.Unimplemented, "method GetVerifyCode not implemented")
 }
-func (UnimplementedDriverServer) SubmitPhone(context.Context, *SubmitPhoneRequest) (*SubmitPhoneReply, error) {
-	return nil, status.Error(codes.Unimplemented, "method SubmitPhone not implemented")
+func (UnimplementedDriverServer) Register(context.Context, *RegisterRequest) (*RegisterReply, error) {
+	return nil, status.Error(codes.Unimplemented, "method Register not implemented")
+}
+func (UnimplementedDriverServer) Login(context.Context, *LoginRequest) (*LoginReply, error) {
+	return nil, status.Error(codes.Unimplemented, "method Login not implemented")
+}
+func (UnimplementedDriverServer) UpdateDriverProfile(context.Context, *UpdateDriverProfileRequest) (*UpdateDriverProfileReply, error) {
+	return nil, status.Error(codes.Unimplemented, "method UpdateDriverProfile not implemented")
+}
+func (UnimplementedDriverServer) UpdateWorkStatus(context.Context, *UpdateWorkStatusRequest) (*UpdateWorkStatusReply, error) {
+	return nil, status.Error(codes.Unimplemented, "method UpdateWorkStatus not implemented")
 }
 func (UnimplementedDriverServer) mustEmbedUnimplementedDriverServer() {}
 func (UnimplementedDriverServer) testEmbeddedByValue()                {}
@@ -120,20 +178,74 @@ func _Driver_GetVerifyCode_Handler(srv interface{}, ctx context.Context, dec fun
 	return interceptor(ctx, in, info, handler)
 }
 
-func _Driver_SubmitPhone_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
-	in := new(SubmitPhoneRequest)
+func _Driver_Register_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
+	in := new(RegisterRequest)
 	if err := dec(in); err != nil {
 		return nil, err
 	}
 	if interceptor == nil {
-		return srv.(DriverServer).SubmitPhone(ctx, in)
+		return srv.(DriverServer).Register(ctx, in)
 	}
 	info := &grpc.UnaryServerInfo{
 		Server:     srv,
-		FullMethod: Driver_SubmitPhone_FullMethodName,
+		FullMethod: Driver_Register_FullMethodName,
 	}
 	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
-		return srv.(DriverServer).SubmitPhone(ctx, req.(*SubmitPhoneRequest))
+		return srv.(DriverServer).Register(ctx, req.(*RegisterRequest))
+	}
+	return interceptor(ctx, in, info, handler)
+}
+
+func _Driver_Login_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
+	in := new(LoginRequest)
+	if err := dec(in); err != nil {
+		return nil, err
+	}
+	if interceptor == nil {
+		return srv.(DriverServer).Login(ctx, in)
+	}
+	info := &grpc.UnaryServerInfo{
+		Server:     srv,
+		FullMethod: Driver_Login_FullMethodName,
+	}
+	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
+		return srv.(DriverServer).Login(ctx, req.(*LoginRequest))
+	}
+	return interceptor(ctx, in, info, handler)
+}
+
+func _Driver_UpdateDriverProfile_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
+	in := new(UpdateDriverProfileRequest)
+	if err := dec(in); err != nil {
+		return nil, err
+	}
+	if interceptor == nil {
+		return srv.(DriverServer).UpdateDriverProfile(ctx, in)
+	}
+	info := &grpc.UnaryServerInfo{
+		Server:     srv,
+		FullMethod: Driver_UpdateDriverProfile_FullMethodName,
+	}
+	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
+		return srv.(DriverServer).UpdateDriverProfile(ctx, req.(*UpdateDriverProfileRequest))
+	}
+	return interceptor(ctx, in, info, handler)
+}
+
+func _Driver_UpdateWorkStatus_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
+	in := new(UpdateWorkStatusRequest)
+	if err := dec(in); err != nil {
+		return nil, err
+	}
+	if interceptor == nil {
+		return srv.(DriverServer).UpdateWorkStatus(ctx, in)
+	}
+	info := &grpc.UnaryServerInfo{
+		Server:     srv,
+		FullMethod: Driver_UpdateWorkStatus_FullMethodName,
+	}
+	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
+		return srv.(DriverServer).UpdateWorkStatus(ctx, req.(*UpdateWorkStatusRequest))
 	}
 	return interceptor(ctx, in, info, handler)
 }
@@ -150,8 +262,20 @@ var Driver_ServiceDesc = grpc.ServiceDesc{
 			Handler:    _Driver_GetVerifyCode_Handler,
 		},
 		{
-			MethodName: "SubmitPhone",
-			Handler:    _Driver_SubmitPhone_Handler,
+			MethodName: "Register",
+			Handler:    _Driver_Register_Handler,
+		},
+		{
+			MethodName: "Login",
+			Handler:    _Driver_Login_Handler,
+		},
+		{
+			MethodName: "UpdateDriverProfile",
+			Handler:    _Driver_UpdateDriverProfile_Handler,
+		},
+		{
+			MethodName: "UpdateWorkStatus",
+			Handler:    _Driver_UpdateWorkStatus_Handler,
 		},
 	},
 	Streams:  []grpc.StreamDesc{},
