# backend/driver/api/driver/driver_http.pb.go
@@ -1,7 +1,7 @@
 // Code generated by protoc-gen-go-http. DO NOT EDIT.
 // versions:
 // - protoc-gen-go-http v2.9.2
-// - protoc             v3.21.12
+// - protoc             v5.29.3
 // source: driver/driver.proto
 
 package driver
@@ -20,17 +20,31 @@ var _ = binding.EncodeURL
 const _ = http.SupportPackageIsVersion1
 
 const OperationDriverGetVerifyCode = "/api.driver.Driver/GetVerifyCode"
-const OperationDriverSubmitPhone = "/api.driver.Driver/SubmitPhone"
+const OperationDriverLogin = "/api.driver.Driver/Login"
+const OperationDriverRegister = "/api.driver.Driver/Register"
+const OperationDriverUpdateDriverProfile = "/api.driver.Driver/UpdateDriverProfile"
+const OperationDriverUpdateWorkStatus = "/api.driver.Driver/UpdateWorkStatus"
 
 type DriverHTTPServer interface {
+	// GetVerifyCode 获取验证码
 	GetVerifyCode(context.Context, *GetVerifyCodeRequest) (*GetVerifyCodeReply, error)
-	SubmitPhone(context.Context, *SubmitPhoneRequest) (*SubmitPhoneReply, error)
+	// Login 登录
+	Login(context.Context, *LoginRequest) (*LoginReply, error)
+	// Register 注册
+	Register(context.Context, *RegisterRequest) (*RegisterReply, error)
+	// UpdateDriverProfile 更新司机资料
+	UpdateDriverProfile(context.Context, *UpdateDriverProfileRequest) (*UpdateDriverProfileReply, error)
+	// UpdateWorkStatus 修改司机的状态
+	UpdateWorkStatus(context.Context, *UpdateWorkStatusRequest) (*UpdateWorkStatusReply, error)
 }
 
 func RegisterDriverHTTPServer(s *http.Server, srv DriverHTTPServer) {
 	r := s.Route("/")
 	r.GET("/driver/get-verify-code/{telephone}", _Driver_GetVerifyCode0_HTTP_Handler(srv))
-	r.POST("driver/submit-phone", _Driver_SubmitPhone0_HTTP_Handler(srv))
+	r.POST("driver/register", _Driver_Register0_HTTP_Handler(srv))
+	r.POST("driver/login", _Driver_Login0_HTTP_Handler(srv))
+	r.POST("/driver/profile", _Driver_UpdateDriverProfile0_HTTP_Handler(srv))
+	r.POST("/driver/status", _Driver_UpdateWorkStatus0_HTTP_Handler(srv))
 }
 
 func _Driver_GetVerifyCode0_HTTP_Handler(srv DriverHTTPServer) func(ctx http.Context) error {
@@ -55,31 +69,105 @@ func _Driver_GetVerifyCode0_HTTP_Handler(srv DriverHTTPServer) func(ctx http.Con
 	}
 }
 
-func _Driver_SubmitPhone0_HTTP_Handler(srv DriverHTTPServer) func(ctx http.Context) error {
+func _Driver_Register0_HTTP_Handler(srv DriverHTTPServer) func(ctx http.Context) error {
 	return func(ctx http.Context) error {
-		var in SubmitPhoneRequest
+		var in RegisterRequest
 		if err := ctx.Bind(&in); err != nil {
 			return err
 		}
 		if err := ctx.BindQuery(&in); err != nil {
 			return err
 		}
-		http.SetOperation(ctx, OperationDriverSubmitPhone)
+		http.SetOperation(ctx, OperationDriverRegister)
 		h := ctx.Middleware(func(ctx context.Context, req interface{}) (interface{}, error) {
-			return srv.SubmitPhone(ctx, req.(*SubmitPhoneRequest))
+			return srv.Register(ctx, req.(*RegisterRequest))
 		})
 		out, err := h(ctx, &in)
 		if err != nil {
 			return err
 		}
-		reply := out.(*SubmitPhoneReply)
+		reply := out.(*RegisterReply)
+		return ctx.Result(200, reply)
+	}
+}
+
+func _Driver_Login0_HTTP_Handler(srv DriverHTTPServer) func(ctx http.Context) error {
+	return func(ctx http.Context) error {
+		var in LoginRequest
+		if err := ctx.Bind(&in); err != nil {
+			return err
+		}
+		if err := ctx.BindQuery(&in); err != nil {
+			return err
+		}
+		http.SetOperation(ctx, OperationDriverLogin)
+		h := ctx.Middleware(func(ctx context.Context, req interface{}) (interface{}, error) {
+			return srv.Login(ctx, req.(*LoginRequest))
+		})
+		out, err := h(ctx, &in)
+		if err != nil {
+			return err
+		}
+		reply := out.(*LoginReply)
+		return ctx.Result(200, reply)
+	}
+}
+
+func _Driver_UpdateDriverProfile0_HTTP_Handler(srv DriverHTTPServer) func(ctx http.Context) error {
+	return func(ctx http.Context) error {
+		var in UpdateDriverProfileRequest
+		if err := ctx.Bind(&in); err != nil {
+			return err
+		}
+		if err := ctx.BindQuery(&in); err != nil {
+			return err
+		}
+		http.SetOperation(ctx, OperationDriverUpdateDriverProfile)
+		h := ctx.Middleware(func(ctx context.Context, req interface{}) (interface{}, error) {
+			return srv.UpdateDriverProfile(ctx, req.(*UpdateDriverProfileRequest))
+		})
+		out, err := h(ctx, &in)
+		if err != nil {
+			return err
+		}
+		reply := out.(*UpdateDriverProfileReply)
+		return ctx.Result(200, reply)
+	}
+}
+
+func _Driver_UpdateWorkStatus0_HTTP_Handler(srv DriverHTTPServer) func(ctx http.Context) error {
+	return func(ctx http.Context) error {
+		var in UpdateWorkStatusRequest
+		if err := ctx.Bind(&in); err != nil {
+			return err
+		}
+		if err := ctx.BindQuery(&in); err != nil {
+			return err
+		}
+		http.SetOperation(ctx, OperationDriverUpdateWorkStatus)
+		h := ctx.Middleware(func(ctx context.Context, req interface{}) (interface{}, error) {
+			return srv.UpdateWorkStatus(ctx, req.(*UpdateWorkStatusRequest))
+		})
+		out, err := h(ctx, &in)
+		if err != nil {
+			return err
+		}
+		reply := out.(*UpdateWorkStatusReply)
 		return ctx.Result(200, reply)
 	}
 }
 
 type DriverHTTPClient interface {
+	// GetVerifyCode 获取验证码
 	GetVerifyCode(ctx context.Context, req *GetVerifyCodeRequest, opts ...http.CallOption) (rsp *GetVerifyCodeReply, err error)
-	SubmitPhone(ctx context.Context, req *SubmitPhoneRequest, opts ...http.CallOption) (rsp *SubmitPhoneReply, err error)
+	// Login 登录
+	Login(ctx context.Context, req *LoginRequest, opts ...http.CallOption) (rsp *LoginReply, err error)
+	// Register 注册
+	Register(ctx context.Context, req *RegisterRequest, opts ...http.CallOption) (rsp *RegisterReply, err error)
+	// UpdateDriverProfile 更新司机资料
+	UpdateDriverProfile(ctx context.Context, req *UpdateDriverProfileRequest, opts ...http.CallOption) (rsp *UpdateDriverProfileReply, err error)
+	// UpdateWorkStatus 修改司机的状态
+	UpdateWorkStatus(ctx context.Context, req *UpdateWorkStatusRequest, opts ...http.CallOption) (rsp *UpdateWorkStatusReply, err error)
 }
 
 type DriverHTTPClientImpl struct {
@@ -90,6 +178,7 @@ func NewDriverHTTPClient(client *http.Client) DriverHTTPClient {
 	return &DriverHTTPClientImpl{client}
 }
 
+// GetVerifyCode 获取验证码
 func (c *DriverHTTPClientImpl) GetVerifyCode(ctx context.Context, in *GetVerifyCodeRequest, opts ...http.CallOption) (*GetVerifyCodeReply, error) {
 	var out GetVerifyCodeReply
 	pattern := "/driver/get-verify-code/{telephone}"
@@ -103,11 +192,54 @@ func (c *DriverHTTPClientImpl) GetVerifyCode(ctx context.Context, in *GetVerifyC
 	return &out, nil
 }
 
-func (c *DriverHTTPClientImpl) SubmitPhone(ctx context.Context, in *SubmitPhoneRequest, opts ...http.CallOption) (*SubmitPhoneReply, error) {
-	var out SubmitPhoneReply
-	pattern := "driver/submit-phone"
+// Login 登录
+func (c *DriverHTTPClientImpl) Login(ctx context.Context, in *LoginRequest, opts ...http.CallOption) (*LoginReply, error) {
+	var out LoginReply
+	pattern := "driver/login"
 	path := binding.EncodeURL(pattern, in, false)
-	opts = append(opts, http.Operation(OperationDriverSubmitPhone))
+	opts = append(opts, http.Operation(OperationDriverLogin))
+	opts = append(opts, http.PathTemplate(pattern))
+	err := c.cc.Invoke(ctx, "POST", path, in, &out, opts...)
+	if err != nil {
+		return nil, err
+	}
+	return &out, nil
+}
+
+// Register 注册
+func (c *DriverHTTPClientImpl) Register(ctx context.Context, in *RegisterRequest, opts ...http.CallOption) (*RegisterReply, error) {
+	var out RegisterReply
+	pattern := "driver/register"
+	path := binding.EncodeURL(pattern, in, false)
+	opts = append(opts, http.Operation(OperationDriverRegister))
+	opts = append(opts, http.PathTemplate(pattern))
+	err := c.cc.Invoke(ctx, "POST", path, in, &out, opts...)
+	if err != nil {
+		return nil, err
+	}
+	return &out, nil
+}
+
+// UpdateDriverProfile 更新司机资料
+func (c *DriverHTTPClientImpl) UpdateDriverProfile(ctx context.Context, in *UpdateDriverProfileRequest, opts ...http.CallOption) (*UpdateDriverProfileReply, error) {
+	var out UpdateDriverProfileReply
+	pattern := "/driver/profile"
+	path := binding.EncodeURL(pattern, in, false)
+	opts = append(opts, http.Operation(OperationDriverUpdateDriverProfile))
+	opts = append(opts, http.PathTemplate(pattern))
+	err := c.cc.Invoke(ctx, "POST", path, in, &out, opts...)
+	if err != nil {
+		return nil, err
+	}
+	return &out, nil
+}
+
+// UpdateWorkStatus 修改司机的状态
+func (c *DriverHTTPClientImpl) UpdateWorkStatus(ctx context.Context, in *UpdateWorkStatusRequest, opts ...http.CallOption) (*UpdateWorkStatusReply, error) {
+	var out UpdateWorkStatusReply
+	pattern := "/driver/status"
+	path := binding.EncodeURL(pattern, in, false)
+	opts = append(opts, http.Operation(OperationDriverUpdateWorkStatus))
 	opts = append(opts, http.PathTemplate(pattern))
 	err := c.cc.Invoke(ctx, "POST", path, in, &out, opts...)
 	if err != nil {
